# DriveWipe

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMITS.md  Cargo.toml  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  LICENSE.md  LIVE-ENVIRONMENT-PLAN.md  OVERHAUL_PLAN.md  README.md  release.sh
.claude/: settings.local.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/drivewipe-cli/: Cargo.toml
crates/drivewipe-cli/src/: confirm.rs  display.rs  main.rs  progress.rs
crates/drivewipe-cli/src/commands/: clone.rs  forensic.rs  health.rs  info.rs  list.rs  mod.rs  partition.rs  profile.rs  queue.rs  report.rs  resume.rs  verify.rs  wipe.rs
crates/drivewipe-core/: Cargo.toml
crates/drivewipe-core/profiles/: crucial_mx.toml  generic_hdd.toml  generic_nvme.toml  generic_ssd.toml  intel_ssd.toml  kingston.toml  samsung_evo.toml  samsung_pro.toml  seagate_barracuda.toml  wd_blue.toml
crates/drivewipe-core/src/: config.rs  error.rs  lib.rs  session.rs  types.rs
crates/drivewipe-core/src/audit/: mod.rs  types.rs
crates/drivewipe-core/src/clone/: block.rs  image.rs  mod.rs  ops.rs  partition_aware.rs
crates/drivewipe-core/src/crypto/: aes_ctr_rng.rs  encrypt.rs  mod.rs
crates/drivewipe-core/src/drive/: info.rs  linux.rs  macos.rs  mod.rs  windows.rs
crates/drivewipe-core/src/forensic/: entropy.rs  export.rs  hidden.rs  mod.rs  report.rs  sampling.rs  signatures.rs
crates/drivewipe-core/src/health/: benchmark.rs  diff.rs  mod.rs  nvme.rs  smart.rs  snapshot.rs
crates/drivewipe-core/src/io/: linux.rs  macos.rs  mod.rs  windows.rs
crates/drivewipe-core/src/keyboard_lock/: mod.rs
crates/drivewipe-core/src/notify/: mod.rs
crates/drivewipe-core/src/partition/: filesystem.rs  gpt.rs  mbr.rs  mod.rs  ops.rs  types.rs
crates/drivewipe-core/src/platform/: privilege.rs
crates/drivewipe-core/src/profile/: database.rs  matcher.rs  mod.rs
crates/drivewipe-core/src/progress/: events.rs  mod.rs
crates/drivewipe-core/src/report/: data.rs  json.rs  mod.rs  pdf.rs
crates/drivewipe-core/src/resume/: mod.rs  state.rs
crates/drivewipe-core/src/sleep_inhibit/: mod.rs
crates/drivewipe-core/src/time_estimate/: mod.rs
crates/drivewipe-core/src/verify/: mod.rs  pattern_verify.rs  zero_verify.rs
crates/drivewipe-core/src/wipe/: crypto_erase.rs  custom.rs  drivewipe_secure.rs  mod.rs  patterns.rs  software.rs
crates/drivewipe-core/src/wipe/firmware/: ata.rs  mod.rs  nvme.rs
crates/drivewipe-core/tests/: aes_ctr_tests.rs  aligned_buffer_tests.rs  audit_tests.rs  cancellation_tests.rs  config_tests.rs  error_tests.rs  health_tests.rs  integration_tests.rs  keyboard_lock_tests.rs  partition_tests.rs  profile_tests.rs  registry_tests.rs  report_tests.rs  resume_state_tests.rs  session_tests.rs  test_drivewipe_secure.rs  test_encryption.rs  test_gutmann_patterns.rs  test_wipe_session_edge_cases.rs  time_estimate_tests.rs  types_tests.rs  verify_tests.rs  wipe_method_tests.rs
crates/drivewipe-core/tests/common/: mod.rs
crates/drivewipe-gui/: Cargo.toml
crates/drivewipe-gui/src/: main.rs  theme.rs
crates/drivewipe-gui/src/screens/: clone.rs  confirm.rs  drive_select.rs  forensic.rs  health.rs  method_select.rs  mod.rs  partition.rs  settings.rs  wipe_progress.rs
crates/drivewipe-live/: Cargo.toml
crates/drivewipe-live/src/: ata_security.rs  capabilities.rs  dco.rs  detect.rs  dma_io.rs  hpa.rs  kernel_module.rs  lib.rs  unfreeze.rs
crates/drivewipe-tui/: Cargo.toml
crates/drivewipe-tui/src/: app.rs  event.rs  main.rs
crates/drivewipe-tui/src/ui/: ata_security_screen.rs  clone_progress.rs  clone_setup.rs  confirm_dialog.rs  drive_list.rs  forensic_screen.rs  health_screen.rs  help.rs  hpa_dco_screen.rs  info_panel.rs  kernel_status_screen.rs  live_dashboard.rs  log_viewer.rs  main_menu.rs  method_select.rs  mod.rs  partition_screen.rs  settings_screen.rs  wipe_dashboard.rs
crates/drivewipe-tui/src/widgets/: mod.rs  progress_gauge.rs  throughput_sparkline.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs  release.rs
docs/: CONTRIBUTING.md  IMPLEMENTATION_PLAN_ARCHIVED.md  PLAN.md  SECURITY.md
docs/dev/: architecture.md  testing.md
docs/user/: cloning.md  config-reference.md  forensics.md  health.md  installation.md  quickstart.md  troubleshooting.md  wipe-methods.md
kernel/drivewipe/: Kbuild  Makefile  drivewipe_ata.c  drivewipe_dma.c  drivewipe_hpa.c  drivewipe_internal.h  drivewipe_ioctl.h  drivewipe_main.c  drivewipe_nvme.c
live/: README.md  grub.cfg  syslinux.cfg
live/alpine-config/: init-script.sh  packages.txt
live/pxe/: README.md  dnsmasq.conf
live/pxe/ipxe/: boot.ipxe  menu.ipxe
scripts/: build-live.sh  build.sh  cross-check.sh  pre-push.sh
