[workspace]
members = [
    "crates/drivewipe-core",
    "crates/drivewipe-cli",
    "crates/drivewipe-tui",
    "crates/drivewipe-gui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["DriveWipe Contributors"]
license = "SEE LICENSE IN LICENSE.md"
repository = "https://github.com/NuGit/DriveWipe"
description = "Cross-platform secure data sanitization tool"

[workspace.dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
dialoguer = "0.12"
indicatif = "0.18"
console = "0.15"

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Concurrency / channels
crossbeam-channel = "0.5"

# Crypto
aes = "0.8"
ctr = "0.9"
cipher = "0.5"
rand = "0.10"
zeroize = { version = "1", features = ["derive"] }

# Platform - Unix
nix = { version = "0.29", features = ["fs", "ioctl"] }
libc = "0.2"

# Platform - Windows
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Security",
] }

# PDF
genpdf = "0.2"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ctrlc = { version = "3", features = ["termination"] }
log = "0.4"
env_logger = "0.11"
dirs = "6"
hostname = "0.4"

# Testing
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
opt-level = 3

[profile.release.package.drivewipe-core]
opt-level = 3
