[workspace]
members = [
    "crates/drivewipe-core",
    "crates/drivewipe-cli",
    "crates/drivewipe-tui",
    "crates/drivewipe-gui",
    "crates/drivewipe-live",
    "crates/xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
authors = ["DriveWipe Contributors"]
license-file = "LICENSE.md"
repository = "https://github.com/KodyDennon/DriveWipe"
description = "Cross-platform secure data sanitization tool"

[workspace.dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"

# CLI
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
dialoguer = "0.12"
indicatif = "0.18"
console = "0.16"

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Concurrency / channels
crossbeam-channel = "0.5"

# Crypto
aes = "0.8"
ctr = "0.9"
cipher = "0.4"
rand = "0.10"
zeroize = { version = "1", features = ["derive"] }
argon2 = "0.5"

# Hashing
sha2 = "0.10"
blake3 = "1"
hmac = "0.12"

# Data formats
regex = "1"
quick-xml = "0.38"
byteorder = "1"
crc32fast = "1"
bitflags = "2"

# Compression
flate2 = "1"
zstd = "0.13"

# Desktop notifications
notify-rust = "4"

# GUI
iced = "0.14"

# Platform - Unix
nix = { version = "0.31", features = ["fs", "ioctl"] }
libc = "0.2"

# Platform - Windows
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Security",
    "Win32_Storage_IscsiDisc",
    "Win32_System_SystemServices",
    "Win32_System_Power",
] }

# PDF
genpdf = "0.2"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ctrlc = { version = "3", features = ["termination"] }
log = "0.4"
env_logger = "0.11"
dirs = "6"
hostname = "0.4"

# Async runtime
tokio = { version = "1.50.0", features = ["full"] }
async-trait = "0.1.89"

# Encoding
hex = "0.4.3"

# Testing
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
strip = true
opt-level = 3

[profile.release.package.drivewipe-core]
opt-level = 3
