[package]
name = "drivewipe-cli"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
description = "Command-line interface for DriveWipe"

[[bin]]
name = "drivewipe"
path = "src/main.rs"

[features]
default = ["pdf-report"]
pdf-report = ["drivewipe-core/pdf-report"]

[dependencies]
drivewipe-core = { path = "../drivewipe-core" }
clap.workspace = true
dialoguer.workspace = true
indicatif.workspace = true
console.workspace = true
crossbeam-channel.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
log.workspace = true
env_logger.workspace = true
ctrlc.workspace = true
anyhow.workspace = true
toml.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
