[package]
name = "drivewipe-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for DriveWipe — drive enumeration, wipe engine, verification, and reporting"

[features]
default = []
pdf-report = ["dep:genpdf"]
real-device-tests = []

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
crossbeam-channel.workspace = true
aes.workspace = true
ctr.workspace = true
cipher.workspace = true
rand.workspace = true
zeroize.workspace = true
uuid.workspace = true
chrono.workspace = true
log.workspace = true
dirs.workspace = true
hostname.workspace = true
genpdf = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
nix.workspace = true
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dev-dependencies]
tempfile.workspace = true
env_logger.workspace = true
