[package]
name = "drivewipe-core"
version = "1.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
description = "Core library for DriveWipe — drive enumeration, wipe engine, verification, and reporting"

[features]
default = []
pdf-report = ["dep:genpdf"]
real-device-tests = []

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
crossbeam-channel.workspace = true
aes.workspace = true
ctr.workspace = true
cipher.workspace = true
rand.workspace = true
zeroize.workspace = true
uuid.workspace = true
chrono.workspace = true
log.workspace = true
dirs.workspace = true
hostname.workspace = true
genpdf = { workspace = true, optional = true }

# New dependencies for overhaul
sha2.workspace = true
blake3.workspace = true
regex.workspace = true
quick-xml.workspace = true
byteorder.workspace = true
crc32fast.workspace = true
bitflags.workspace = true
flate2.workspace = true
zstd.workspace = true
notify-rust.workspace = true
tokio = { version = "1.50.0", features = ["full"] }
async-trait = "0.1.89"
hex = "0.4.3"

[target.'cfg(unix)'.dependencies]
nix.workspace = true
libc.workspace = true


[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dev-dependencies]
tempfile.workspace = true
env_logger.workspace = true
