[package]
name = "drivewipe-gui"
version = "1.1.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
description = "Graphical UI for DriveWipe (Phase 2)"

[[bin]]
name = "drivewipe-gui"
path = "src/main.rs"

[dependencies]
drivewipe-core = { path = "../drivewipe-core" }
iced.workspace = true
