[package]
name = "drivewipe-gui"
version = "1.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
description = "Graphical UI for DriveWipe (Phase 2)"

[[bin]]
name = "drivewipe-gui"
path = "src/main.rs"

[dependencies]
crossbeam-channel.workspace = true
drivewipe-core = { path = "../drivewipe-core" }
iced.workspace = true
tokio = { version = "1.50.0", features = ["full"] }
