[package]
name = "drivewipe-gui"
version = "1.3.4"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
description = "Graphical UI for DriveWipe (iced framework)"

[[bin]]
name = "drivewipe-gui"
path = "src/main.rs"

[dependencies]
crossbeam-channel.workspace = true
drivewipe-core = { path = "../drivewipe-core" }
iced.workspace = true
tokio.workspace = true
uuid.workspace = true
