[package]
name = "drivewipe-live"
version = "1.1.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
description = "Live environment capabilities for DriveWipe — HPA/DCO detection, kernel module interface, ATA security, DMA I/O"

[dependencies]
drivewipe-core = { path = "../drivewipe-core" }
thiserror.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
nix.workspace = true
libc.workspace = true
