[package]
name = "drivewipe-tui"
version = "1.3.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license-file.workspace = true
description = "Terminal UI for DriveWipe"

[[bin]]
name = "drivewipe-tui"
path = "src/main.rs"

[features]
default = ["pdf-report"]
pdf-report = ["drivewipe-core/pdf-report"]
live = ["dep:drivewipe-live"]

[dependencies]
drivewipe-core = { path = "../drivewipe-core" }
drivewipe-live = { path = "../drivewipe-live", optional = true }
ratatui.workspace = true
crossterm.workspace = true
crossbeam-channel.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
log.workspace = true
env_logger.workspace = true
ctrlc.workspace = true
anyhow.workspace = true
tokio.workspace = true
