[package]
name = "xtask"
version = "1.1.10"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
toml_edit = "0.22"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
